# opusfile

./: .gitignore  CMakeLists.txt
dep/: CMakeLists.txt
dep/ogg-dep/: CMakeLists.txt
dep/ogg-dep/cmake_modules/: FindOgg.cmake
dep/ogg-dep/src/: dru_ogg_dep.cpp  dru_ogg_dep.hpp
dep/opus-dep/: CMakeLists.txt
dep/opus-dep/cmake_modules/: FindOpus.cmake
dep/opus-dep/src/: dru_opus_dep.cpp  dru_opus_dep.hpp
lib/: CMakeLists.txt
